--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
 		<div class="site-mobile-menu-header">
 			<div class="site-mobile-menu-close">
 				<span class="icofont-close js-menu-toggle"></span>
-			</div>
+									<div><span class="fw-bold">Location:</span> <span class="text-dark">Wilson Airport, Nairobi, Kenya</span></div>
+									<div class="footer-map mt-2">
+										<iframe src="https://www.google.com/maps?q=Wilson+Airport,+Nairobi,+Kenya&output=embed" width="100%" height="120" style="border:0; border-radius:8px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+									</div>
+					</div>
 		</div>
 		<div class="site-mobile-menu-body"></div>
 	</div>
@@ -74,7 +78,7 @@
 	<div class="hero overlay" style="background-image: url('images/background.jpg');">
 		<div class="container">
 			<div class="row align-items-center justify-content-between">
-				<div class="col-lg-5 me-auto text-start pe-lg-5">
+				<div class="col-12 col-lg-5 me-auto text-start pe-lg-5 mb-4 mb-lg-0">
 					<div class="intro-text">
 						<div class="mb-4">
 							<h1 data-aos="fade-left" class="hero-heading">Welcome!</h1>
@@ -91,7 +95,7 @@
 				</div>
 	
 								<!-- Carousel for the Foreground Image -->
-	<div class="col-lg-7" data-aos="fade-left">
+	<div class="col-12 col-lg-7" data-aos="fade-left">
 		<div id="foregroundCarousel" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<!-- First Image Slide (Active) -->
@@ -184,12 +188,12 @@
 	<div class="section upcoming-sermon js-countdown py-5">
 		<div class="container">
 			<div class="row justify-content-between counter-wrap" id="clockdiv">
-				<div class="col-lg-4 mb-4 mb-lg-0">
-					<img src="images/family.jpg" style="height: 350px; width: 350px;" alt="Image" class="img-fluid rounded">
+				<div class="col-12 col-lg-4 mb-4 mb-lg-0">
+					<img src="images/service.jpg" style="height: 245px; width: 100%; max-width: 368px;" alt="Image" class="img-fluid rounded mx-auto d-block">
 				</div>
 				<div class="col-lg-8">
 					<span class="subheading d-block mb-4">Upcoming event</span>
-					<h2 class="text-black">Family Sunday - Sunday 14th September 2025 </h2>
+					<h2 class="text-black">Sunday Service - Sunday 21st September 2025 </h2>
 					<p class="sermon-meta mb-4"><strong id="event-status">Countdown: Days from now</strong></p>
 	
 					<div class="row">
@@ -243,7 +247,7 @@
 			<div class="row g-5">
 				<div class="col-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="0">
 					<div class="sermon-entry">
-						<a href="sermons.html"><img src="images/PstEsther.jpg" style="height: 360px; width: 400px;"  alt="Image" class="img-fluid mb-3 rounded"></a>
+						<a href="sermons.html"><img src="images/Prayer.jpg" style="height: 267px; width: 400px;"  alt="Image" class="img-fluid mb-3 rounded"></a>
 						<div class="sermon-body">
 							<span class="date">6 Oct 2024 <span class="mx-2">&bullet;</span> By Pastor Esther Munyao </span>
 							<h3 class="mb-2"><a href="#">Prayer Gifts</a></h3>
@@ -255,7 +259,7 @@
 				</div>
 				<div class="col-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
 					<div class="sermon-entry">
-						<a href="sermons.html"><img src="images/PstClyde.jpg" style="height: 360px; width: 400px;"  alt="Image" class="img-fluid mb-3 rounded"></a>
+						<a href="sermons.html"><img src="images/Sermon2.jpg" style="height: 267px; width: 400px;"  alt="Image" class="img-fluid mb-3 rounded"></a>
 						<div class="sermon-body">
 							<span class="date">29 Sep 2024 <span class="mx-2">&bullet;</span> By Pastor Clyde Otieno </span>
 							<h3 class="mb-2"><a href="#">God Has a Plan</a></h3>
@@ -267,9 +271,9 @@
 				</div>
 				<div class="col-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
 					<div class="sermon-entry">
-						<a href="sermons.html"><img src="images/PstLaboso.jpg" style="height: 360px; width: 400px;"  alt="Image" class="img-fluid mb-3 rounded"></a>
+						<a href="sermons.html"><img src="images/Sermon3.jpg" style="height: 267px; width: 400px;"  alt="Image" class="img-fluid mb-3 rounded"></a>
 						<div class="sermon-body">
-							<span class="date">3 Sep 2024 <span class="mx-2">&bullet;</span> By Pastor Mary Laboso </span>
+							<span class="date">3 Sep 2024 <span class="mx-2">&bullet;</span> By Pastor Moses </span>
 							<h3 class="mb-2"><a href="#">Thanksgiving</a></h3>
 							<p class="mb-5"> <b>Philippians 1:1-11</b> Paul and Timothy, servants of Christ Jesus, To all God's holy people in 
 								Christ Jesus at Philippi, together with the overseers and deacons... </p>
@@ -287,8 +291,16 @@
 			<div class="row justify-content-between">
 				<div class="col-lg-4" data-aos="fade-up">
 					<span class="subheading mb-4 d-block">About us</span>
-					<p>VISION</p>
-					<p>MISSION</p>
+					<p><b>VISION - To be a Community of Believers that wins and builds sould for Christ</b></p>
+					<p><b>MISSION - Fostering oneness in Christ, winning and building people to Maturity in Him, for God's Service in and beyond Wilson Airport</b></p>
+					<p><b>Core Values:</b></p>
+					<ul>
+						<li><b>Christ Centered</b></li>
+						<li><b>Biblical authority</b></li>
+						<li><b>Great Commandment</b></li>
+						<li><b>Great Commission</b></li>
+						<li><b>Unity of Purpose</b></li>
+					</ul>
 					<p class="mt-5"><a href="ministry.html" class="btn btn-primary">Know more about us</a></p>
 				</div>
 				<div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
@@ -312,7 +324,9 @@
 						<div class="col-6 col-sm-6 col-md-4 col-lg-4 mb-4">
 							<img src="images/battalion.jpg" style="height: 303; width: 304;" alt="Image" class="img-fluid rounded">
 						</div>
-						<p>2025 THEME : Enock walked with the Lord</p>
+						<p><b>2025 THEME : WALKING WITH GOD</b></p>
+						<p><b>Genesis 5 : 24 - Enock walked faithfully with God; then he was no more, because God took him away.</b></p>
+						<p><b>2nd Peter 3 : 18 - Growing in Grace and Knowledge of our Lord and Saviour Jesus Christ</b></p>
 					</div>
 				</div>
 			</div>
@@ -426,54 +440,116 @@
 
 
 
-	<div class="site-footer bg-white">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4">
-					<div class="widget">
-						<h3>Contact</h3>
-						<address>AIC-Neema Wilson Airport. Nairobi, Kenya</address>
-						<ul class="list-unstyled links">
-							<li><a href="tel://254 729 243824">+254 729 243824</a></li>
-							<li><a href="tel://254 729 243824">+254 729 243824</a></li>
-							<li><a href="mailto:aicwilsonchurch@gmail.com">aicwilsonchurch@gmail.com <address></address></a></li>
-						</ul>
-					</div> <!-- /.widget -->
-				</div> <!-- /.col-lg-4 -->
-				<div class="col-lg-4">
-					<div class="widget">
-						<h3>Sources</h3>
-						<ul class="list-unstyled float-start links">
-							<li><a href="index.html">About us</a></li>
-							<li><a href="Services.html">Services</a></li>
-							<li><a href="events.html">Events</a></li>
-							<li><a href="sermons.html">Sermons</a></li>
-						</ul>
-						<ul class="list-unstyled float-start links">
-							<li><a href="Give.html">Givings</a></li>
-							<li><a href="contact.html">Contact</a></li>
-						</ul>
-					</div> <!-- /.widget -->
-				</div> <!-- /.col-lg-4 -->
-				<div class="col-lg-4">
-					<div class="widget">
-						<h3>Links</h3>
-						<ul class="list-unstyled social">
-							<li><a href="https://www.instagram.com/aic_wilson_airport/profilecard/?igsh=MWh6emZsNzhsaDdwbw=="><span class="icon-instagram"></span></a></li>
-							<li><a href="https://youtube.com/@aicneemawilsonairport?feature=shared"><span class="icon-youtube"></span></a></li>
-							<li><a href="https://www.tiktok.com/@aic_neema_wilson_airport?_t=8qB1g3zTR0I&_r=1"><span class="icon-twitter"></span></a></li>
-							<li><a href="http://facebook.com/AIC-NEEMA-Wilson-Airport"><span class="icon-facebook"></span></a></li>
-						</ul>
-					</div> <!-- /.widget -->
-				</div> <!-- /.col-lg-4 -->
-			</div> <!-- /.row -->
 
-			<div class="row mt-5">
-				<div class="col-12 text-center">
+	<footer class="site-footer bg-light text-dark pt-5 pb-3" style="border-top: 3px solid #519259;">
+		<div class="container">
+
+				<!-- First row: logo, social, contact -->
+				<div class="row align-items-center mb-4">
+					<div class="col-md-4 text-center mb-3 mb-md-0">
+						<img src="images/aiclogo-removebg-preview.png" alt="AIC-NEEMA" style="height: 60px;">
+						<h5 class="fw-bold mt-2 mb-1">AIC Neema Wilson Airport</h5>
+						<p class="mb-0 small">Nairobi, Kenya</p>
+					</div>
+					<div class="col-md-4 text-center mb-3 mb-md-0">
+						<ul class="list-inline mb-2">
+							<li class="list-inline-item mx-2"><a href="https://www.instagram.com/aic_wilson_airport/profilecard/?igsh=MWh6emZsNzhsaDdwbw==" class="footer-social"><span class="icon-instagram"></span></a></li>
+							<li class="list-inline-item mx-2"><a href="https://youtube.com/@aicneemawilsonairport?feature=shared" class="footer-social"><span class="icon-youtube"></span></a></li>
+							<li class="list-inline-item mx-2"><a href="https://www.tiktok.com/@aic_neema_wilson_airport?_t=8qB1g3zTR0I&_r=1" class="footer-social"><span class="icon-twitter"></span></a></li>
+							<li class="list-inline-item mx-2"><a href="http://facebook.com/AIC-NEEMA-Wilson-Airport" class="footer-social"><span class="icon-facebook"></span></a></li>
+						</ul>
+						<p class="mb-0 small">Follow us on social media</p>
+					</div>
+					<div class="col-md-4 text-center">
+						<h6 class="fw-bold mb-1">Contact</h6>
+						<div class="small mb-2">
+							<div><span class="fw-bold">Phone:</span> <a href="tel://254729243824" class="text-dark text-decoration-underline">+254 729 243824</a></div>
+							<div><span class="fw-bold">Email:</span> <a href="mailto:aicwilsonchurch@gmail.com" class="text-dark text-decoration-underline">aicwilsonchurch@gmail.com</a></div>
+						</div>
+					</div>
 				</div>
-			</div>
-		</div> <!-- /.container -->
-	</div> <!-- /.site-footer -->
+
+				<!-- Second row: quick links, service times, map -->
+				<div class="row mb-4">
+					<div class="col-md-4 mb-3 mb-md-0 text-center">
+						<h6 class="fw-bold mb-1">Quick Links</h6>
+						<ul class="list-unstyled small mb-0">
+							<li><a href="index.html" class="text-dark text-decoration-underline">About us</a></li>
+							<li><a href="Services.html" class="text-dark text-decoration-underline">Services</a></li>
+							<li><a href="events.html" class="text-dark text-decoration-underline">Events</a></li>
+							<li><a href="sermons.html" class="text-dark text-decoration-underline">Sermons</a></li>
+							<li><a href="Give.html" class="text-dark text-decoration-underline">Givings</a></li>
+							<li><a href="contact.html" class="text-dark text-decoration-underline">Contact</a></li>
+						</ul>
+					</div>
+					<div class="col-md-4 mb-3 mb-md-0 text-center">
+						<h6 class="fw-bold mb-1">Service Times</h6>
+						<ul class="list-unstyled small mb-0">
+							<li>Morning Glory: 8 AM - 9 AM</li>
+							<li>Main Service: 10 AM - 12:30 PM</li>
+							<li>Youth Service: 12:30 PM - 1:30 PM</li>
+						</ul>
+					</div>
+					<div class="col-md-4 mb-3 mb-md-0 text-center">
+						<h6 class="fw-bold mb-1">Location</h6>
+						<div class="footer-map mb-2" style="max-width: 350px; margin: 0 auto;">
+							  <iframe src="https://www.google.com/maps?q=AIC+Neema+Wilson+Airport,+Nairobi,+Kenya&output=embed" width="100%" height="140" style="border:0; border-radius:8px; min-width:180px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							  <div class="small mt-1">AIC Neema Wilson Airport, Nairobi, Kenya</div>
+						</div>
+					</div>
+				</div>
+						<p class="mb-0 small">&copy; <span id="footer-year"></span> AIC Neema Wilson Airport. All rights reserved.</p>
+					</div>
+				</div>
+		</div>
+	</footer>
+
+	<style>
+		.site-footer {
+			background: #f8f9fa !important;
+			color: #222 !important;
+			border-top: 3px solid #519259;
+			font-size: 1rem;
+		}
+		.site-footer h5, .site-footer h6, .site-footer h4 {
+			color: #519259;
+		}
+		.site-footer a {
+			color: #222;
+			transition: color 0.2s;
+		}
+		.site-footer a:hover {
+			color: #519259;
+			text-decoration: underline;
+		}
+		.footer-social {
+			font-size: 2rem;
+			color: #519259 !important;
+			transition: color 0.2s;
+		}
+		.footer-social:hover {
+			color: #2C736B !important;
+		}
+		.site-footer ul {
+			padding-left: 0;
+			list-style: none;
+		}
+		.site-footer .fw-bold {
+			font-weight: 600 !important;
+		}
+		@media (max-width: 767.98px) {
+			.site-footer .col-md-4, .site-footer .col-md-6, .site-footer .col-lg-4 {
+				margin-bottom: 1.5rem;
+			}
+		}
+	</style>
+	<script>
+		// Set current year in footer
+		document.addEventListener('DOMContentLoaded', function() {
+			var yearSpan = document.getElementById('footer-year');
+			if (yearSpan) yearSpan.textContent = new Date().getFullYear();
+		});
+	</script>
 
 
 	<!-- Preloader -->
