--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="Hacker Emmanuel" content="AIC NEEMA">
 	<link rel="shortcut icon" href="images/Favicon.png">
 
-	<meta name="description" content="" />
+	<meta name="description" content="Welcome to AIC Neema Wilson Airport Church, located near Wilson Airport along Langata Road, Nairobi. We are close to the Carnivore Grounds, making it easy to find and visit. Join us for worship, fellowship, and community." />
 	<meta name="keywords" content="bootstrap, bootstrap5" />
 
 	<!-- Bootstrap JS (for the carousel) -->
@@ -31,7 +31,7 @@
 	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/style.css">
 
-	<title>Aic Neema Wilson Airport</title>
+	<title>Aic Neema Wilson Airport | Nairobi Church near Wilson Airport</title>
 </head>
 <body >
 	<div class="site-mobile-menu site-navbar-target">
