--- a/ministry.html
+++ b/ministry.html
@@ -248,62 +248,113 @@
 			</div>
 		</div>
 	</div>
-	<div class="site-footer bg-white">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4">
-					<div class="widget">
-						<h3>Contact</h3>
-						<address>AIC-Neema Wilson Airport. Nairobi, Kenya</address>
-						<ul class="list-unstyled links">
-							<li><a href="tel://254 729 243824">+254 729 243824</a></li>
-							<li><a href="tel://254 729 243824">+254 729 243824</a></li>
-							<li><a href="mailto:aicneema@gmail.com">aicwilsonchurch@gmail.com <address></address></a></li>
+		<footer class="site-footer pt-4 pb-2">
+			<div class="container">
+				<!-- First row: logo, social, contact -->
+				<div class="row mb-4">
+					<div class="col-md-4 text-center mb-3 mb-md-0">
+						<img src="images/aiclogo-removebg-preview.png" alt="AIC-NEEMA" style="height: 60px;">
+						<h5 class="fw-bold mt-2 mb-1">AIC Neema Wilson Airport</h5>
+						<p class="mb-0 small">Nairobi, Kenya</p>
+					</div>
+					<div class="col-md-4 text-center mb-3 mb-md-0">
+						<ul class="list-inline mb-2">
+							<li class="list-inline-item mx-2"><a href="https://www.instagram.com/aic_wilson_airport/profilecard/?igsh=MWh6emZsNzhsaDdwbw==" class="footer-social"><span class="icon-instagram"></span></a></li>
+							<li class="list-inline-item mx-2"><a href="https://youtube.com/@aicneemawilsonairport?feature=shared" class="footer-social"><span class="icon-youtube"></span></a></li>
+							<li class="list-inline-item mx-2"><a href="https://www.tiktok.com/@aic_neema_wilson_airport?_t=8qB1g3zTR0I&_r=1" class="footer-social"><span class="icon-twitter"></span></a></li>
+							<li class="list-inline-item mx-2"><a href="http://facebook.com/AIC-NEEMA-Wilson-Airport" class="footer-social"><span class="icon-facebook"></span></a></li>
 						</ul>
-					</div> <!-- /.widget -->
-				</div> <!-- /.col-lg-4 -->
-				<div class="col-lg-4">
-					<div class="widget">
-						<h3>Sources</h3>
-						<ul class="list-unstyled float-start links">
-							<li><a href="index.html">About us</a></li>
-							<li><a href="Services.html">Services</a></li>
-							<li><a href="#">Vision</a></li>
-							<li><a href="#">Mission</a></li>
-						</ul>
-						<ul class="list-unstyled float-start links">
-							<li><a href="#">Partners</a></li>
-							<li><a href="#">FAQ</a></li>
-							<li><a href="#">Creative</a></li>
-						</ul>
-					</div> <!-- /.widget -->
-				</div> <!-- /.col-lg-4 -->
-				<div class="col-lg-4">
-					<div class="widget">
-						<h3>Links</h3>
-						<ul class="list-unstyled links">
-							<li><a href="#">Our Vision</a></li>
-							<li><a href="index.html">About us</a></li>
-							<li><a href="contact.html">Contact us</a></li>
-						</ul>
-
-						<ul class="list-unstyled social">
-							<li><a href="https://www.instagram.com/aic_wilson_airport/profilecard/?igsh=MWh6emZsNzhsaDdwbw=="><span class="icon-instagram"></span></a></li>
-							<li><a href="https://youtube.com/@aicneemawilsonairport?feature=shared"><span class="icon-youtube"></span></a></li>
-							<li><a href="#"><span class="icon-twitter"></span></a></li>
-							<li><a href="http://facebook.com/AIC-NEEMA-Wilson-Airport"><span class="icon-facebook"></span></a></li>
-						</ul>
-					</div> <!-- /.widget -->
-				</div> <!-- /.col-lg-4 -->
-			</div> <!-- /.row -->
-
-			<div class="row mt-5">
-				<div class="col-12 text-center">
-					
+						<p class="mb-0 small">Follow us on social media</p>
+					</div>
+					<div class="col-md-4 text-center">
+						<h6 class="fw-bold mb-1">Contact</h6>
+						<div class="small mb-2">
+							<div><span class="fw-bold">Phone:</span> <a href="tel://254729243824" class="text-dark text-decoration-underline">+254 729 243824</a></div>
+							<div><span class="fw-bold">Email:</span> <a href="mailto:aicwilsonchurch@gmail.com" class="text-dark text-decoration-underline">aicwilsonchurch@gmail.com</a></div>
+						</div>
+					</div>
 				</div>
-			</div>
-		</div> <!-- /.container -->
-	</div> <!-- /.site-footer -->
+
+				<!-- Second row: quick links, service times, map -->
+				<div class="row mb-4">
+					<div class="col-md-4 mb-3 mb-md-0 text-center">
+						<h6 class="fw-bold mb-1">Quick Links</h6>
+						<ul class="list-unstyled small mb-0">
+							<li><a href="index.html" class="text-dark text-decoration-underline">About us</a></li>
+							<li><a href="Services.html" class="text-dark text-decoration-underline">Services</a></li>
+							<li><a href="events.html" class="text-dark text-decoration-underline">Events</a></li>
+							<li><a href="sermons.html" class="text-dark text-decoration-underline">Sermons</a></li>
+							<li><a href="Give.html" class="text-dark text-decoration-underline">Givings</a></li>
+							<li><a href="contact.html" class="text-dark text-decoration-underline">Contact</a></li>
+						</ul>
+					</div>
+					<div class="col-md-4 mb-3 mb-md-0 text-center">
+						<h6 class="fw-bold mb-1">Service Times</h6>
+						<ul class="list-unstyled small mb-0">
+							<li>Morning Glory: 8 AM - 9 AM</li>
+							<li>Main Service: 10 AM - 12:30 PM</li>
+							<li>Youth Service: 12:30 PM - 1:30 PM</li>
+						</ul>
+					</div>
+					<div class="col-md-4 mb-3 mb-md-0 text-center">
+						<h6 class="fw-bold mb-1">Location</h6>
+						<div class="footer-map mb-2" style="max-width: 350px; margin: 0 auto;">
+							  <iframe src="https://www.google.com/maps?q=AIC+Neema+Wilson+Airport,+Nairobi,+Kenya&output=embed" width="100%" height="140" style="border:0; border-radius:8px; min-width:180px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							  <div class="small mt-1">AIC Neema Wilson Airport, Nairobi, Kenya</div>
+						</div>
+					</div>
+				</div>
+						<p class="mb-0 small">&copy; <span id="footer-year"></span> AIC Neema Wilson Airport. All rights reserved.</p>
+					</div>
+				</div>
+		</footer>
+
+		<style>
+			.site-footer {
+				background: #f8f9fa !important;
+				color: #222 !important;
+				border-top: 3px solid #519259;
+				font-size: 1rem;
+			}
+			.site-footer h5, .site-footer h6, .site-footer h4 {
+				color: #519259;
+			}
+			.site-footer a {
+				color: #222;
+				transition: color 0.2s;
+			}
+			.site-footer a:hover {
+				color: #519259;
+				text-decoration: underline;
+			}
+			.footer-social {
+				font-size: 2rem;
+				color: #519259 !important;
+				transition: color 0.2s;
+			}
+			.footer-social:hover {
+				color: #2C736B !important;
+			}
+			.site-footer ul {
+				padding-left: 0;
+				list-style: none;
+			}
+			.site-footer .fw-bold {
+				font-weight: 600 !important;
+			}
+			@media (max-width: 767.98px) {
+				.site-footer .col-md-4, .site-footer .col-md-6, .site-footer .col-lg-4 {
+					margin-bottom: 1.5rem;
+				}
+			}
+		</style>
+		<script>
+			// Set current year in footer
+			document.addEventListener('DOMContentLoaded', function() {
+				var yearSpan = document.getElementById('footer-year');
+				if (yearSpan) yearSpan.textContent = new Date().getFullYear();
+			});
+		</script>
 
 
 	<!-- Preloader -->
