--- a/events.html
+++ b/events.html
@@ -82,7 +82,7 @@
 					</div>
 				</div>
 
-				<div class="col-lg-7" data-aos="fade-left">
+				<div class="col-lg-7 d-none d-lg-block" data-aos="fade-left">
 					<a href="https://youtu.be/SjXLlr-1GbQ?feature=shared" class="video-bg glightbox">
 						<span class="icon"><span class="icon-play"></span></span>
 						<img src="images/Event.jpg" style="height: 450px; width: 550px;" alt="Image" class="img-fluid rounded">
