--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/style.css">
 
-	<title>Aic Neema Wilson Airport | Nairobi Church near Wilson Airport</title>
+	<title>Aic Neema Wilson Airport</title>
 </head>
 <body >
 	<div class="site-mobile-menu site-navbar-target">
@@ -85,7 +85,7 @@
 						</div>
 						<div>
 							<p class="mb-5" data-aos="fade-left" data-aos-delay="200">
-								Welcome to AIC-NEEMA-Wilson-Airport. We love visitors and we would be glad to have you as our visitor. Follow below the order of our services
+								Welcome to AIC-Neema-Wilson-Airport. We love visitors and we would be glad to have you as our visitor. Follow below the order of our services
 							</p>
 							<p data-aos="fade-left" data-aos-delay="300">
 								<a href="sermons.html" class="btn btn-primary">Go to sermons</a>
@@ -95,7 +95,7 @@
 				</div>
 	
 								<!-- Carousel for the Foreground Image -->
-	<div class="col-12 col-lg-7" data-aos="fade-left">
+	<div class="col-12 col-lg-7 d-none d-lg-block" data-aos="fade-left">
 		<div id="foregroundCarousel" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<!-- First Image Slide (Active) -->
