--- a/ministry.html
+++ b/ministry.html
@@ -87,7 +87,7 @@
 					</div>
 
 					<!-- Carousel for the Foreground Image -->
-	<div class="col-lg-7" data-aos="fade-left">
+	<div class="col-lg-7 d-none d-lg-block" data-aos="fade-left">
 		<div id="foregroundCarousel" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<!-- First Image Slide (Active) -->
