--- a/index.html
+++ b/index.html
@@ -38,14 +38,60 @@
 		<div class="site-mobile-menu-header">
 			<div class="site-mobile-menu-close">
 				<span class="icofont-close js-menu-toggle"></span>
-									<div><span class="fw-bold">Location:</span> <span class="text-dark">Wilson Airport, Nairobi, Kenya</span></div>
-									<div class="footer-map mt-2">
-										<iframe src="https://www.google.com/maps?q=Wilson+Airport,+Nairobi,+Kenya&output=embed" width="100%" height="120" style="border:0; border-radius:8px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-									</div>
-					</div>
+			</div>
+			<div class="text-center py-3">
+				<img src="images/aiclogo-removebg-preview.png" alt="AIC-NEEMA" style="height: 50px;">
+				<div class="fw-bold mt-2 mb-1">AIC Neema Wilson Airport</div>
+			</div>
 		</div>
 		<div class="site-mobile-menu-body"></div>
 	</div>
+</style>
+<style>
+	/* Mobile sidebar improvements */
+	@media (max-width: 991.98px) {
+		.site-mobile-menu.site-navbar-target {
+			background: #f8f9fa;
+			border-right: 2px solid #519259;
+			min-width: 220px;
+			max-width: 80vw;
+		}
+		.site-mobile-menu-header {
+			border-bottom: 1px solid #e3e6ea;
+			background: #fff;
+		}
+		.site-mobile-menu-header img {
+			display: block;
+			margin: 0 auto 0.5rem auto;
+		}
+		.site-mobile-menu-header .fw-bold {
+			color: #519259;
+			font-size: 1.1rem;
+		}
+		.site-mobile-menu-body {
+			padding: 1.5rem 1rem;
+		}
+		.site-mobile-menu-body ul {
+			list-style: none;
+			padding: 0;
+			margin: 0;
+		}
+		.site-mobile-menu-body li {
+			margin-bottom: 1.2rem;
+		}
+		.site-mobile-menu-body a {
+			color: #222;
+			font-size: 1.1rem;
+			font-weight: 500;
+			text-decoration: none;
+			transition: color 0.2s;
+		}
+		.site-mobile-menu-body a:hover {
+			color: #519259;
+			text-decoration: underline;
+		}
+	}
+</style>
 
 	<nav class="site-nav">
 		<div class="container">
