--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 					</div>
 				</div>
 
-				<div class="col-lg-7" data-aos="fade-left">
+				<div class="col-lg-7 d-none d-lg-block" data-aos="fade-left">
 					<!-- <a href="https://www.youtube.com/watch?v=mwtbEGNABWU" class="video-bg glightbox"> -->
 						<span class="icon"><span class="icon-play"></span></span>
 						<img src="images/church.jpg" style="height: 450px; width: 600px;" alt="Image" class="img-fluid rounded">
@@ -183,6 +183,24 @@
 			.contact-card { margin-bottom: 2rem; }
 		}
 	</style>
+		@media (max-width: 767.98px) {
+			.hero .intro-text {
+				text-align: center !important;
+			}
+			.hero .intro-text h1.hero-heading {
+				font-size: 2rem !important;
+				text-align: center !important;
+			}
+			.hero .intro-text p {
+				font-size: 1rem !important;
+				text-align: center !important;
+			}
+			.hero .btn {
+				display: inline-block;
+				margin-left: auto;
+				margin-right: auto;
+			}
+		}
 	
 	</div>
 
