--- a/events.html
+++ b/events.html
@@ -236,6 +236,24 @@
 				}
 			}
 		</style>
+			@media (max-width: 767.98px) {
+				.hero .intro-text {
+					text-align: center !important;
+				}
+				.hero .intro-text h1.hero-heading {
+					font-size: 2rem !important;
+					text-align: center !important;
+				}
+				.hero .intro-text p {
+					font-size: 1rem !important;
+					text-align: center !important;
+				}
+				.hero .btn {
+					display: inline-block;
+					margin-left: auto;
+					margin-right: auto;
+				}
+			}
 		<script>
 			// Set current year in footer
 			document.addEventListener('DOMContentLoaded', function() {
