--- a/sermons.html
+++ b/sermons.html
@@ -35,9 +35,79 @@
 			<div class="site-mobile-menu-close">
 				<span class="icofont-close js-menu-toggle"></span>
 			</div>
+			<div class="text-center py-3">
+				<img src="images/aiclogo-removebg-preview.png" alt="AIC-NEEMA" style="height: 50px;">
+				<div class="fw-bold mt-2 mb-1">AIC Neema Wilson Airport</div>
+			</div>
 		</div>
 		<div class="site-mobile-menu-body"></div>
 	</div>
+</style>
+<style>
+	/* Mobile sidebar improvements */
+	@media (max-width: 991.98px) {
+		.site-mobile-menu.site-navbar-target {
+			background: #f8f9fa;
+			border-right: 2px solid #519259;
+			min-width: 220px;
+			max-width: 80vw;
+		}
+		.site-mobile-menu-header {
+			border-bottom: 1px solid #e3e6ea;
+			background: #fff;
+		}
+		.site-mobile-menu-header img {
+			display: block;
+			margin: 0 auto 0.5rem auto;
+		}
+		.site-mobile-menu-header .fw-bold {
+			color: #519259;
+			font-size: 1.1rem;
+		}
+		.site-mobile-menu-body {
+			padding: 1.5rem 1rem;
+		}
+		.site-mobile-menu-body ul {
+			list-style: none;
+			padding: 0;
+			margin: 0;
+		}
+		.site-mobile-menu-body li {
+			margin-bottom: 1.2rem;
+		}
+		.site-mobile-menu-body a {
+			color: #222;
+			font-size: 1.1rem;
+			font-weight: 500;
+			text-decoration: none;
+			transition: color 0.2s;
+		}
+		.site-mobile-menu-body a:hover {
+			color: #519259;
+			text-decoration: underline;
+		}
+	}
+	@media (max-width: 767.98px) {
+		.hero .intro-text {
+			text-align: center !important;
+		}
+		.hero .intro-text h1.hero-heading {
+			font-size: 1.3rem !important;
+			text-align: center !important;
+			line-height: 1.2;
+		}
+		.hero .intro-text p {
+			font-size: 0.95rem !important;
+			text-align: center !important;
+			line-height: 1.4;
+		}
+		.hero .btn {
+			display: inline-block;
+			margin-left: auto;
+			margin-right: auto;
+		}
+	}
+</style>
 
 	<nav class="site-nav">
 		<div class="container">
