--- a/contact.html
+++ b/contact.html
@@ -232,18 +232,20 @@
 		@media (max-width: 991.98px) {
 			.contact-card { margin-bottom: 2rem; }
 		}
+
 	</style>
+	<style>
 		@media (max-width: 767.98px) {
 			.hero .intro-text {
 				text-align: center !important;
 			}
 			.hero .intro-text h1.hero-heading {
-				font-size: 1.3rem !important;
+				font-size: 1.7rem !important;
 				text-align: center !important;
 				line-height: 1.2;
 			}
 			.hero .intro-text p {
-				font-size: 0.95rem !important;
+				font-size: 1.08rem !important;
 				text-align: center !important;
 				line-height: 1.4;
 			}
@@ -253,8 +255,7 @@
 				margin-right: auto;
 			}
 		}
-	
-	</div>
+	</style>
 
 
 	<div id="map">
