--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@
 		<div class="container">
 			<div class="row justify-content-between counter-wrap" id="clockdiv">
 				<div class="col-12 col-lg-4 mb-4 mb-lg-0">
-					<img src="images/service.jpg" style="height: 245px; width: 100%; max-width: 368px;" alt="Image" class="img-fluid rounded mx-auto d-block">
+					<img src="images/services.jpg" style="height: 245px; width: 100%; max-width: 368px;" alt="Image" class="img-fluid rounded mx-auto d-block">
 				</div>
 				<div class="col-lg-8">
 					<span class="subheading d-block mb-4">Upcoming event</span>
-					<h2 class="text-black">Sunday Service - Sunday 21st September 2025 </h2>
-					<p class="sermon-meta mb-4"><strong id="event-status">Countdown: Days from now</strong></p>
+					<h2 class="text-black">Kesha - Friday 26th September 2025 </h2>
+					<p class="sermon-meta mb-4"><strong id="event-status">COUNTDOWN</strong></p>
 	
 					<div class="row">
 						<div class="col-6 col-sm-6 col-md-6 col-lg-3 text-left">
