--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 			<div class="row justify-content-between">
 				<div class="col-lg-4" data-aos="fade-up">
 					<span class="subheading mb-4 d-block">About us</span>
-					<p><b>VISION - To be a Community of Believers that wins and builds sould for Christ</b></p>
+					<p><b>VISION - To be a Community of Believers that wins and builds souls for Christ</b></p>
 					<p><b>MISSION - Fostering oneness in Christ, winning and building people to Maturity in Him, for God's Service in and beyond Wilson Airport</b></p>
 					<p><b>Core Values:</b></p>
 					<ul>
