--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 				</div>
 				<div class="col-lg-8">
 					<span class="subheading d-block mb-4">Upcoming event</span>
-					<h2 class="text-black">Kesha - Friday 26th September 2025 </h2>
+					<h2 class="text-black">Service - Sunday 5th October 2025 </h2>
 					<p class="sermon-meta mb-4"><strong id="event-status">COUNTDOWN</strong></p>
 	
 					<div class="row">
