Upcoming event updates

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 				<div class="carousel-item">
 					<a href="https://www.youtube.com/watch?v=SjXLlr-1GbQ&t=197s&pp=ygUYYWljIG5lZW1hIHdpbHNvbiBhaXJwb3J0" class="video-bg glightbox">
 						<span class="icon"><span class="icon-play"></span></span>
-						<img src="images/CYA.jpg" style="height: 400px; width: 550px;" alt="CYA" class="img-fluid rounded">
+						<img src="images/CYA3.jpg" style="height: 400px; width: 550px;" alt="CYA" class="img-fluid rounded">
 						<div class="carousel-caption d-none d-md-block">
 							<p>Christian Youth In Action</p>
 						</div>
@@ -235,7 +235,7 @@
 		<div class="container">
 			<div class="row justify-content-between counter-wrap" id="clockdiv">
 				<div class="col-12 col-lg-4 mb-4 mb-lg-0">
-					<img src="images/services.jpg" style="height: 245px; width: 100%; max-width: 368px;" alt="Image" class="img-fluid rounded mx-auto d-block">
+					<img src="images/CYA.jpg" style="height: 245px; width: 100%; max-width: 368px;" alt="Image" class="img-fluid rounded mx-auto d-block">
 				</div>
 				<div class="col-lg-8">
 					<span class="subheading d-block mb-4">Upcoming event</span>
