--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
 		<div class="container">
 			<div class="row justify-content-between counter-wrap" id="clockdiv">
 				<div class="col-12 col-lg-4 mb-4 mb-lg-0">
-					<img src="images/CYA.jpg" style="height: 245px; width: 100%; max-width: 368px;" alt="Image" class="img-fluid rounded mx-auto d-block">
+					<img src="images/P&W.jpg" style="height: 245px; width: 100%; max-width: 368px;" alt="Image" class="img-fluid rounded mx-auto d-block">
 				</div>
 				<div class="col-lg-8">
 					<span class="subheading d-block mb-4">Upcoming event</span>
-					<h2 class="text-black">Youth Fun Day - Friday 10th October 2025 </h2>
+					<h2 class="text-black">Sunday Service - Sunday 19th October 2025 </h2>
 					<p class="sermon-meta mb-4"><strong id="event-status">COUNTDOWN</strong></p>
 	
 					<div class="row">
