--- a/events.html
+++ b/events.html
@@ -168,6 +168,18 @@
 			<div class="row g-5">
 				<div class="col-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="0">
 					<div class="sermon-entry">
+						<a href="#"><img src="images/Youth Funday.jpg" style="height: 280px; width: 400px;" alt="Image" class="img-fluid mb-3 rounded"></a>
+						<div class="sermon-body">
+							<span class="date">10th Oct 2025 <span class="mx-2">&bullet;</span> AIC Neema Wilson</span>
+							<h3 class="mb-2"><a href="https://www.youtube.com/results?search_query=aic+neema+wilson+airport">Youth Funday</a></h3>
+							<p class="mb-5">It was an exciting day filled with games, laughter, and fellowship! Our youth came together to celebrate, connect, and grow in faith. 
+								Click the <b>Explore</b> button  below to see more highlights from our fun day!</p>
+							<p><a href="https://youtube.com/shorts/oXhRAQxKjz0?feature=shared" class="btn btn-primary btn-sm">Explore</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="0">
+					<div class="sermon-entry">
 						<a href="#"><img src="images/Kesha.jpg" style="height: 280px; width: 400px;" alt="Image" class="img-fluid mb-3 rounded"></a>
 						<div class="sermon-body">
 							<span class="date">28 Mar 2025 <span class="mx-2">&bullet;</span> AIC Neema</span>
