--- a/events.html
+++ b/events.html
@@ -171,10 +171,10 @@
 						<a href="#"><img src="images/Youth Funday.jpg" style="height: 280px; width: 400px;" alt="Image" class="img-fluid mb-3 rounded"></a>
 						<div class="sermon-body">
 							<span class="date">10th Oct 2025 <span class="mx-2">&bullet;</span> AIC Neema Wilson</span>
-							<h3 class="mb-2"><a href="https://www.youtube.com/results?search_query=aic+neema+wilson+airport">Youth Funday</a></h3>
+							<h3 class="mb-2"><a href="https://www.instagram.com/p/DPwu_i2jNC8/?utm_source=ig_web_copy_link&igsh=bmtudGZzeTVxcTh6">Youth Funday</a></h3>
 							<p class="mb-5">It was an exciting day filled with games, laughter, and fellowship! Our youth came together to celebrate, connect, and grow in faith. 
 								Click the <b>Explore</b> button  below to see more highlights from our fun day!</p>
-							<p><a href="https://youtube.com/shorts/oXhRAQxKjz0?feature=shared" class="btn btn-primary btn-sm">Explore</a></p>
+							<p><a href="https://www.instagram.com/p/DPwu_i2jNC8/?utm_source=ig_web_copy_link&igsh=bmtudGZzeTVxcTh6" class="btn btn-primary btn-sm">Explore</a></p>
 						</div>
 					</div>
 				</div>
